<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".fragment.AboutAppFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:padding="20dp"
        android:text="@string/para" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:layout_marginTop="170dp"
        android:padding="20dp"
        android:text="@string/para1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="#ffffff"
        android:layout_marginTop="330dp"
        android:textSize="16sp"
        android:padding="20dp"
        android:text="@string/para2" />

</RelativeLayout>